@@ -300,6 +300,8 @@ extern void CommandAccept( char * ),
     CommandAgree( char * ),
     CommandAnalysis ( char * ),
     CommandDatabaseDump( char * ),
+    CommandDatabaseExport( char * ),
+    CommandDatabaseImport( char * ),
     CommandDatabaseRollout( char * ),
     CommandDatabaseGenerate( char * ),
     CommandDatabaseTrain( char * ),
